Fixing v align

--- a/components/graph/graph.less
+++ b/components/graph/graph.less
@@ -38,7 +38,7 @@
       cursor: move;
       margin-left: 0px;
       margin-right: 0px;
-      margin-top: 11px;
+      margin-top: 8px;
       outline: none;
       padding: 2px 5px 2px 5px;
       border: 3px solid transparent;
@@ -50,6 +50,7 @@
         border-color: transparent;
       }
       &.focused {
+        margin-top: 6px;
         border-color: #fff;
       }
 
